# kip-lang

./: Cargo.toml  README.md  test.kip
compiler/: Cargo.toml
compiler/src/: cli.rs  codegen.rs  driver.rs  interner.rs  lexer.rs  lib.rs  logger.rs  main.rs  name.rs  scopechk.rs  source.rs  sym_tbl.rs  token.rs  typechk.rs
compiler/src/ast/: expr.rs  lit.rs  mod.rs  op.rs  region.rs  stmt.rs  ty.rs  visit.rs
compiler/src/codegen/: ic.rs  mod.rs  optimize.rs  visit.rs
compiler/src/parser/: expr.rs  mod.rs  stmt.rs  tests.rs  ty.rs
docs/: GRAMMAR.txt
editors/vim/ftdetect/: grammar.vim  ic.vim  kip.vim
editors/vim/syntax/: grammar.vim  ic.vim  kip.vim
example/: main.kip
src/: ast.rs  cli.rs  codegen.rs  driver.rs  lexer.rs  lib.rs  logger.rs  main.rs  parser.rs  source.rs  symbol.rs  typechk.rs  util.rs
src/parser/: block.rs  expr.rs  func.rs  mod.rs  stmt.rs  top_lvl.rs  ty.rs
syntax/: kip.vim
